--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
     "flash": "^1.1.0",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.0.3",
@@ -27,6 +29,7 @@
     "node-dev": "^8.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "sanitize-html": "^2.11.0"
   }
 }
