--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "go": "node-dev app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
