--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node": "^21.2.0",
     "node-dev": "^8.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
